# FermataX

./: BUILDING_README_SECTION.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle  codex-adb.init.gradle  proguard-rules.pro
.github/workflows/: build-aab.yml
artifacts/: fermataX-2.0.1-v291-universal.apk
depends/utils/src/main/java/me/aap/utils/pref/: PreferenceView.java
depends/utils/src/main/res/values/: strings.xml
docs/: xtream-integration-notes.md
fermata/: build.gradle
fermata/src/auto/: AndroidManifest.xml
fermata/src/auto/assets/: xposed_init
fermata/src/auto/java/me/aap/fermata/auto/: AccessibilityEventDispatcherService.java  CarEditText.java  CarKeyboardOverlay.java  CarService.java  EventDispatcher.java  LauncherActivity.java  MainCarActivity.java  MediaServiceStarter.java  MirrorActivity.java  MirrorDisplay.java  MirrorService.java  MirrorServiceFS.java  ProjectionActivity.java  ProjectionService.java  Su.java  Xposed.java  XposedEventDispatcherService.java
fermata/src/auto/res/drawable/: media_service_bg.xml
fermata/src/main/java/me/aap/fermata/: FermataApplication.java
fermata/src/main/java/me/aap/fermata/addon/: AddonInfo.java  AddonLauncher.java  AddonManager.java  AddonRegistry.java  AddonState.java  FermataAddon.java
fermata/src/main/java/me/aap/fermata/media/engine/: MediaEngineManager.java
fermata/src/main/java/me/aap/fermata/media/lib/: DefaultMediaLib.java  DefaultRecent.java  ExportedItem.java  ItemContainer.java  M3uItem.java  M3uTrackItem.java  MediaLib.java  PlayableItemWrapper.java
fermata/src/main/java/me/aap/fermata/media/pref/: RecentPrefs.java
fermata/src/main/java/me/aap/fermata/vfs/: FermataVfsManager.java
fermata/src/main/res/drawable/: radio.xml
fermata/src/main/res/drawable-anydpi-v23/: fermata_l.xml  mirror_l.xml
fermata/src/main/res/drawable-anydpi-v24/: fermata_l.xml
fermata/src/main/res/drawable-anydpi-v26/: fermata_s.xml  mirror_s.xml
fermata/src/main/res/layout/: dashboard_fragment.xml  dashboard_item.xml  dashboard_smart_top_item.xml
fermata/src/main/res/values/: ids.xml  strings.xml
fermata/src/main/res/values-ar/: strings.xml
fermata/src/main/res/values-de/: strings.xml
fermata/src/main/res/values-es/: strings.xml
fermata/src/main/res/values-fr/: strings.xml
fermata/src/main/res/values-hr/: strings.xml
fermata/src/main/res/values-it/: strings.xml
fermata/src/main/res/values-ja/: strings.xml
fermata/src/main/res/values-km/: strings.xml
fermata/src/main/res/values-ko/: strings.xml
fermata/src/main/res/values-pl/: strings.xml
fermata/src/main/res/values-pt/: strings.xml
fermata/src/main/res/values-ro/: strings.xml
fermata/src/main/res/values-ru/: strings.xml
fermata/src/main/res/values-tr/: strings.xml
fermata/src/main/res/values-vi/: strings.xml
fermata/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
modules/cast/: build.gradle
modules/cast/src/main/: AndroidManifest.xml
modules/chat/: build.gradle
modules/chat/src/main/: AndroidManifest.xml
modules/exoplayer/src/main/: AndroidManifest.xml
modules/felex/: build.gradle
modules/felex/src/main/: AndroidManifest.xml
modules/mlkit/src/main/: AndroidManifest.xml
modules/poi/: build.gradle
modules/radio/: build.gradle
modules/radio/src/debug/: AndroidManifest.xml
modules/radio/src/main/: AndroidManifest.xml
modules/radio/src/main/res/values/: strings.xml
modules/tv/: build.gradle
modules/tv/src/debug/: AndroidManifest.xml
modules/tv/src/main/: AndroidManifest.xml
modules/tv/src/main/res/values/: strings.xml
modules/vlc/src/main/: AndroidManifest.xml
modules/web/: build.gradle
modules/web/src/main/: AndroidManifest.xml
modules/web/src/main/res/raw/: youtube_sponsorblock.js
modules/web/src/main/res/values/: strings.xml
modules/whisper/: build.gradle
modules/whisper/src/main/cpp/: CMakeLists.txt
(+104 files in other folders)
